Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6, 10.11, 11.4, 11.8
-
None
Description
The tests fails since less than a week (first failure March 7th, 2025) in 10.11 and higher versions. First failure was in MDEV-30000 pull request, and it failed ever since it was merged.
It fails multiple times a day, on all Windows builders.
The error message is
2025-03-11 14:26:44 0 [ERROR] InnoDB: The size of tablespace file 'test/t#p#p0.ibd' is only 32768, should be at least 65536!
|
2025-03-11 14:26:44 0 [ERROR] InnoDB: Recovery cannot access file ./test/t#p#p0.ibd (tablespace 9)
|
Previously, such errors were seen in 10.4, and were not really attended by anyone.
Attachments
Issue Links
- relates to
-
MDEV-30000 make mariadb-backup to force an innodb checkpoint
-
- Closed
-