extra/mariabackup/xtrabackup.cc
@@ -5508,10 +5508,23 @@ xtrabackup_apply_delta(
 					buf + FSP_HEADER_OFFSET + FSP_SIZE);
 				if (mach_read_from_4(buf
 						     + FIL_PAGE_SPACE_ID)) {
-					if (!os_file_set_size(
-						    dst_path, dst_file,
-						    n_pages * page_size))
+#ifdef _WIN32
+					os_offset_t last_page =
+					  os_file_get_size(dst_file) /
+					  page_size;
+
+					if (last_page < n_pages &&
+					    !os_file_set_size(
+					       dst_path, dst_file,
+					       n_pages * page_size))
 						goto error;
+#else
+					if (os_file_set_size(
+					      dst_path, dst_file,
+					      n_pages *page_size))
+						goto error;
+#endif /* _WIN32 */
+
 				} else if (fil_space_t* space
 					   = fil_system.sys_space) {
 					/* The system tablespace can
